# Gifski

./: .gitattributes  .gitignore  .gitmodules  .swiftlint.yml  Cartfile  Cartfile.resolved  Config.xcconfig  Shared.xcconfig  app-store-description.txt  app-store-keywords.txt  contributing.md  license  maintaining.md  readme.md
.github/: funding.yml
Carthage/Checkouts/DockProgress/: .gitattributes  .gitignore  Package.swift  readme.md
Carthage/Checkouts/DockProgress/DockProgress.xcodeproj/: DockProgressTests_Info.plist  DockProgress_Info.plist  project.pbxproj
Carthage/Checkouts/DockProgress/DockProgress.xcodeproj/xcshareddata/xcschemes/: DockProgress-Package.xcscheme  xcschememanagement.plist
Carthage/Checkouts/DockProgress/Sources/DockProgress/: DockProgress.swift  util.swift
Carthage/Checkouts/DockProgress/Tests/DockProgressTests/: DockProgressTests.swift
Carthage/Checkouts/ProgressKit/: LICENSE  Package.swift  ProgressKit.podspec  README.md
Carthage/Checkouts/ProgressKit/Demo/Demo-macOS.playground/: Contents.swift  timeline.xctimeline
Carthage/Checkouts/ProgressKit/ProgressKit.xcodeproj/: project.pbxproj
Carthage/Checkouts/ProgressKit/ProgressKit.xcodeproj/xcshareddata/xcschemes/: ProgressKit-Package.xcscheme  xcschememanagement.plist
Carthage/Checkouts/ProgressKit/ProgressKit.xcworkspace/: contents.xcworkspacedata
Carthage/Checkouts/ProgressKit/Sources/ProgressKit/: BaseView.swift  CircularProgressView.swift  Crawler.swift  DeterminateAnimation.swift  IndeterminateAnimation.swift  MaterialProgress.swift  ProgressBar.swift  ProgressUtils.swift  Rainbow.swift  RotatingArc.swift  ShootingStars.swift  Spinner.swift
Carthage/Checkouts/ProgressKit/Tests/: LinuxMain.swift
Carthage/Checkouts/ProgressKit/Tests/ProgressKitTests/: ProgressKitTests.swift
Frameworks/Crashlytics.framework/: upload-symbols
Frameworks/Crashlytics.framework/Versions/A/: Crashlytics
Frameworks/Crashlytics.framework/Versions/A/Resources/: Info.plist
Gifski/: App.swift  AppDelegate.swift  AppState.swift  CancelView.swift  CheckerboardView.swift  CompletedScreen.swift  Constants.swift  ConversionCompletedView.swift  ConversionCompletedViewController.swift  ConversionCompletedViewController.xib  ConversionScreen.swift  ConversionViewController.swift  Credits.rtf  CropOverlayView.swift  CustomButton.swift  DimensionMode.swift  DraggableFile.swift  DropVideoViewController.swift  EditControls.swift  EditCropScreen.swift  EditScreen.swift  EditVideoViewController.swift  EditVideoViewController.xib  EstimatedFileSize.swift  ExportModifiedVideo.swift  ExtendedAttributes.swift  GIFGenerator.swift  Gifski-Bridging-Header.h  Gifski.entitlements  Gifski.swift  GifskiWrapper.swift  GoogleService-Info.plist  HoverView.swift  Info.plist  IntTextField.swift  Intents.swift  InternetAccessPolicy.json  Localizable.xcstrings  MainScreen.swift  MainWindowController.swift  (+27 more)
Gifski.xcodeproj/: project.pbxproj
Gifski.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Gifski.xcodeproj/xcshareddata/xcschemes/: Gifski.xcscheme  Share Extension.xcscheme
Gifski/Assets.xcassets/AppIcon.appiconset/: Contents.json
Gifski/Assets.xcassets/BackgroundImage.imageset/: Contents.json
Gifski/Assets.xcassets/ButtonTextColor.colorset/: Contents.json
Gifski/Assets.xcassets/CheckerboardFirstColor.colorset/: Contents.json
Gifski/Assets.xcassets/CheckerboardSecondColor.colorset/: Contents.json
Gifski/Assets.xcassets/ProgressCircleColor.colorset/: Contents.json
Gifski/Assets.xcassets/ShadowColor.colorset/: Contents.json
Gifski/Assets.xcassets/Theme.colorset/: Contents.json
Gifski/Assets.xcassets/gray.colorset/: Contents.json
Gifski/Assets.xcassets/green.colorset/: Contents.json
Gifski/Base.lproj/: MainMenu.xib
Gifski/Components/: CheckerboardView.swift  IntTextField.swift  TrimmingAVPlayer.swift
Gifski/Crop/: CropDragGestureModifier.swift  CropHandlePosition.swift  CropOverlayView.swift  CropRect.swift  CropSettings.swift  CropToolBarItems.swift  EditCropDragGesture.swift  PickerAspectRatio.swift
Gifski/Preview/: CVPixelBuffer+convertToGIF.swift  CompositePreviewShared.h  FullPreviewGenerationEvent.swift  FullPreviewStream.swift  LockedCVPixelBuffer.swift  PreBakedFrames.swift  PreviewRenderer.swift  PreviewRendererContext.swift  PreviewVideoCompositor.swift  PreviewableComposition.swift  SendableTexture.swift  SettingsForFullPreview.swift  compositePreview.metal  createAVAssetFromGIF.swift  createFullPreviewStream.swift
Quick Convert to GIF with Gifski/: ActionRequestHandler.swift  Info.plist  Quick_Convert_to_GIF_with_Gifski.entitlements  icon.icns
Quick Convert to GIF with Gifski/Media.xcassets/TouchBarBezel.colorset/: Contents.json
Share Extension/: Info.plist  ShareController.swift  Share_Extension.entitlements  Utilities.swift
Share with Gifski/: Info.plist  ShareViewController.swift  Share_with_Gifski.entitlements  icon.icns  loadingHtml.html
Share with Gifski/Base.lproj/: ShareViewController.xib
ShareExtension/: Info.plist  ShareExtension.entitlements  ShareViewController.swift  Share_with_Gifski.entitlements  Utilities.swift
ShareExtension/Base.lproj/: ShareViewController.xib
Stuff/: AppIcon.sketch  BackgroundImage.sketch  Quick Convert With Gifski.shortcut
Stuff/QuickAction/: How To Create a Quick Action Shortcut.md
gifski-api/: .gitignore  Cargo.toml  Makefile  README.md  gifski.h  snapcraft.yaml
gifski-api/.github/: dependabot.yml
gifski-api/gifski.xcodeproj/: project.pbxproj
gifski-api/gifski.xcodeproj/xcshareddata/xcschemes/: gifski.a (static library).xcscheme
gifski-api/src/: c_api.rs  collector.rs  denoise.rs  encodegifsicle.rs  encoderust.rs  error.rs  gifsicle.rs  lib.rs  minipool.rs  ordqueue.rs  progress.rs
gifski-api/src/c_api/: c_api_error.rs
gifski-api/tests/: tests.rs
